@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-03-13T12:17:22Z",
+  "timestamp" : "2025-03-14T00:42:51Z",
   "count_outdated" : 2938,
   "uniques_outdated" : 955,
-  "count" : 2961,
-  "uniques" : 969,
+  "count" : 2965,
+  "uniques" : 972,
   "views" : [
     {
       "timestamp": "2025-02-28T00:00:00Z",
@@ -70,12 +70,12 @@
     },
     {
       "timestamp": "2025-03-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 5,
+      "count_minmax": [ 1, 5 ],
+      "count_decinc": [ 0, 5 ],
+      "uniques": 4,
+      "uniques_minmax": [ 1, 4 ],
+      "uniques_decinc": [ 0, 4 ]
     }
   ]
 }
