@@ -1,6 +1,6 @@
 {
-  "count": 23,
-  "uniques": 14,
+  "count": 27,
+  "uniques": 17,
   "views": [
     {
       "timestamp": "2025-02-28T00:00:00Z",
@@ -39,8 +39,8 @@
     },
     {
       "timestamp": "2025-03-13T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 5,
+      "uniques": 4
     }
   ]
 }
